# training-worms-to-eat

./: Cargo.toml  README.md  worm_model.json
src/: control.rs  main.rs  map.rs  math.rs  train.rs  worm.rs
src/food/: draw.rs  generate.rs  mod.rs
src/worm/: draw.rs  generate.rs  mod.rs  move.rs  search.rs  starve.rs
