[package]
name = "training-worms-to-eat"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "~0.15", features = ["train", "wgpu", "vision"] }
rand = "0.8.5"
raylib = "5.0.2"
smallvec = "1.13.2"
genevo = "0.7"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
